--- a/pom.xml
+++ b/pom.xml
@@ -1,6 +1,6 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>Magente</groupId>
+	<groupId>Minerva</groupId>
 	<artifactId>MyGift</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
@@ -67,6 +67,25 @@
 					<source>1.8</source>
 					<target>1.8</target>
 				</configuration>
+			</plugin>
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-dependency-plugin</artifactId>
+				<version>3.0.2</version>
+				<executions>
+					<execution>
+						<phase> package </phase>
+						<goals> <goal> copy </goal> </goals>
+						<configuration>
+							<artifactItems>
+								<groupId>com.github.jsimone</groupId>
+								<artifactId>webapp-runner</artifactId>
+								<version>8.5.31.0</version>
+								<destFileName>webapp-runner.jar</destFileName>
+							</artifactItems>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
