--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>Minerva</groupId>
 	<artifactId>MyGift</artifactId>
@@ -57,7 +58,15 @@
 			<artifactId>tomcat-jsp-api</artifactId>
 			<version>9.0.1</version>
 		</dependency>
+
+		<dependency>
+			<groupId>org.jscience</groupId>
+			<artifactId>jscience</artifactId>
+			<version>4.3.1</version>
+		</dependency>
+		
 	</dependencies>
+
 	<build>
 		<finalName>MyGift</finalName>
 		<plugins>
@@ -70,4 +79,5 @@
 			</plugin>
 		</plugins>
 	</build>
+
 </project>
