--- a/src/main/WEB-INF/web.xml
+++ b/src/main/WEB-INF/web.xml
@@ -8,10 +8,10 @@
  
     <servlet-mapping>
         <servlet-name>MyGiftServer</servlet-name>
-        <url-pattern>src/resources/Index</url-pattern>
+        <url-pattern>/Index</url-pattern>
     </servlet-mapping>
  
     <welcome-file-list>
-        <welcome-file>index.html</welcome-file>
+        <welcome-file>Index.html</welcome-file>
     </welcome-file-list>
 </web-app>
