--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,6 @@
 	<artifactId>MyGift</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<dependencies>
-
 		<dependency>
 			<groupId>com.sparkjava</groupId>
 			<artifactId>spark-core</artifactId>
@@ -68,9 +67,17 @@
 		
 	</dependencies>
 
-	 <build>
-        <plugins>
-            <plugin>
+	<build>
+		<finalName>MyGift</finalName>
+		<plugins>
+			<plugin>    
+				<artifactId>maven-compiler-plugin</artifactId>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+			<plugin>
                 <groupId>org.codehaus.mojo</groupId>
                 <artifactId>appassembler-maven-plugin</artifactId>
                 <version>1.1.1</version>
@@ -92,7 +99,7 @@
                     </execution>
                 </executions>
             </plugin>
-        </plugins>
-    </build>
+		</plugins>
+	</build>
 
 </project>
