--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
 				</plugin>
 				<plugin>
 					<artifactId>maven-dependency-plugin</artifactId>
-					<version>3.8.0</version>
+					<version>3.1.2</version>
 					<configuration>
 						<descriptorRefs>
 							<!-- This tells Maven to include all dependencies -->
@@ -112,7 +112,7 @@
 						<processTypes>
 							<!-- Tell Heroku how to launch your application -->
 							<!-- You might have to remove the ./ in front -->
-							<web>java $JAVA_OPTS -cp target/classes:target/dependency/* app.Aplicacao</web>
+							<web>java $JAVA_OPTS -cp target/classes:target/dependency/* itens.MyGiftCore</web>
 						</processTypes>
 					</configuration>
 				</plugin>
