--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 	</dependencies>
 
 	<build>
+		<sourceDirectory>src/main/java</sourceDirectory>
+		<testSourceDirectory>src/test/java</testSourceDirectory>
+		<resources>
+			<resource>
+				<directory>src/main/resources</directory>
+			</resource>
+		</resources>
 		<plugins>
 			<plugin>    
 				<artifactId>maven-compiler-plugin</artifactId>
