--- a/pom.xml
+++ b/pom.xml
@@ -81,7 +81,7 @@
 			        <processTypes>
 			            <!-- Tell Heroku how to launch your application -->
 			            <!-- You might have to remove the ./ in front   -->
-			            <web>java $JAVA_OPTS -cp target/classes:target/dependency/* Main</web>
+			            <web>web: java -jar target/MyGift-0.0.1-SNAPSHOT.jar</web>
 			        </processTypes>
 			    </configuration>
 			</plugin>
